# symphony

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build_instructions.md  config.json  config.yaml  index.html  main.js  main.py  main.spec  neutralino.config.json  package-lock.json  package.json  packages_that_fail.md  patch-webview.py  preload.js  requirements.txt  symphony-backend.spec  vite.config.js  win_c.man.py  win_c_man.py  workingfile.mgrid
.github/workflows/: main.yml
inner/assets/: workingfile.mgrid  workingfile.symphony
inner/src/: audiotest.py  events.py  gui_pygame.py  main.py  recently-viewed.json  response.json  todo.txt  user-settings.json  values.py
scripts/: generate-icons.mjs  generate-installer-assets.py  measure-packages.ps1  package-app-mac.sh  package-app-windows.bat  package-app.mjs  packages_raw.txt  packages_raw_js.txt  packages_sorted.md  sort_packages.py  stage-backend-sidecar.mjs  tauri-build-installer.mjs  verify-build-artifacts.mjs
src/: App.jsx  electron-api-shim.js  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
src-tauri/splash/: index.html
src-tauri/src/: main.rs
src/assets/: directory.json  program-data.json  recentlyViewed.json
src/components/: Content.jsx  Dropdown.jsx  TitleBar.jsx  Tooltip.jsx  content.css  dropdown.css  titlebar.css
src/contexts/: DirectoryContext.jsx  directory-context.jsx
src/lib/: editorProcess.js  symphonyApi.js
src/modals/: AddAutoSave.jsx  ConvertModal.jsx  DeleteConfirmationModal.jsx  EditModal.jsx  ExportModal.jsx  FileNotExist.jsx  NewFolder.jsx  (+27 more)
(+169 files in other folders)
